Mon Apr  14:46:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-common.h:
          Windows doesn't have setenv/unsetenv

Mon Apr  6 13:44:31 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Queue_T.cpp (close): Added a comment explaining why
          we don't need to check the return value of deactivate_i().

Mon Apr  6 09:43:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-WinCE.h:
          Added missing ACE_LACKS_GETENV

Mon Apr  6 07:25:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-integritySCA.h:
          Added ACE_LACKS_PUTENV_PROTOTYPE

        * ace/config-WinCE.h:
          WinCE doesn't have environment variables

        * ace/OS_NS_stdlib.cpp:
        * ace/OS_NS_stdlib.h:
        * ace/OS_NS_stdlib.inl:
        * ace/OS_NS_unistd.cpp:
          Added setenv/unsetenv wrappers and used a specific define per
          environment method

Sun Apr  5 19:08:47 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Queue_T.cpp (close): Fixed this method so it returns
          the number of messages that were flushed from the queue, as per
          its documentation.  Thanks to Igor Rayak <igor dot rayak at
          gmail dot com> for reporting this.

Sun Apr  5 18:39:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_main.cpp:
          Added missing ACE_Export

Sat Apr  4 11:49:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.4.h:
          Removed not needed define

Fri Apr  3 13:28:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/arpa/os_inet.h:
        * ace/os_include/sys/os_select.h:
        * ace/os_include/sys/os_socket.h:
        * ace/os_include/sys/os_un.h:
        * ace/Token.h:
        * ace/config-vxworks6.4.h:
          Moved some VxWorks checks to the config file and added some
          new defines
